--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//WebRoot/guestbook.jsp=UTF-8
 encoding//WebRoot/messageList.jsp=UTF-8
 encoding//src/dao/DBconn.java=UTF-8
+encoding//src/dao/MessageDao.java=UTF-8
