--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -70,6 +70,18 @@
     <servlet-name>FindMessage</servlet-name>
     <servlet-class>servlet.FindMessage</servlet-class>
   </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>SignUpServlet</servlet-name>
+    <servlet-class>servlet.SignUpServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>LoginServletUser</servlet-name>
+    <servlet-class>servlet.LoginServletUser</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>ImageServlet</servlet-name>
     <url-pattern>/ImageServlet</url-pattern>
@@ -109,6 +121,14 @@
   <servlet-mapping>
     <servlet-name>FindMessage</servlet-name>
     <url-pattern>/FindMessage</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>SignUpServlet</servlet-name>
+    <url-pattern>/SignUpServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>LoginServletUser</servlet-name>
+    <url-pattern>/LoginServletUser</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
