--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -70,6 +70,16 @@
     <servlet-name>FindMessage</servlet-name>
     <servlet-class>servlet.FindMessage</servlet-class>
   </servlet>
+   <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>OrderByTimeServlet</servlet-name>
+    <servlet-class>servlet.OrderByTimeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>OrderByTimeServlet</servlet-name>
+    <url-pattern>/OrderByTimeServlet</url-pattern>
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>ImageServlet</servlet-name>
     <url-pattern>/ImageServlet</url-pattern>
