--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,4 +3,5 @@ encoding//WebRoot/guestbook.jsp=UTF-8
 encoding//WebRoot/messageList.jsp=UTF-8
 encoding//src/dao/DBconn.java=UTF-8
 encoding//src/dao/MessageDao.java=UTF-8
+encoding//src/dao/ReplyDao.java=UTF-8
 encoding//src/servlet/OperationServlet.java=UTF-8
