--- a/.classpath
+++ b/.classpath
@@ -20,6 +20,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/mysql-connector-java-5.1.0-bin.jar"/>
-	<classpathentry kind="lib" path="C:/Users/mystark/Documents/Tencent Files/1205921213/FileRecv/servlet-api.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
