--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -70,6 +70,16 @@
     <servlet-name>FindMessage</servlet-name>
     <servlet-class>servlet.FindMessage</servlet-class>
   </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>OrderByReply</servlet-name>
+    <servlet-class>servlet.OrderByReply</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>OrderByReply</servlet-name>
+    <url-pattern>/OrderByReply</url-pattern>
+  </servlet-mapping>
    <servlet>
     <description>This is the description of my J2EE component</description>
     <display-name>This is the display name of my J2EE component</display-name>
