--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebRoot/css/style.css=UTF-8
 encoding//WebRoot/guestbook.jsp=UTF-8
 encoding//WebRoot/messageList.jsp=UTF-8
 encoding//src/dao/DBconn.java=UTF-8
